правка тестов 2